[package]
name = "fang_oost"
version = "0.14.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/fang_oost_rust"
repository = "https://github.com/phillyfan1138/fang_oost_rust"
readme = "README.md"
license = "MIT"
description = "A library implementing Fang and Oosterlee's algorithm for inverting characteristic functions."
edition = "2018"

[dependencies]
num = "0.2"
rayon = "1.0.1"
num-complex = "0.2"

[dev-dependencies]
approx = "0.2.0"
statrs = "0.7.0"
criterion = "0.2"

[[bench]]
name = "fang_oost_bench"
harness = false

[badges]
travis-ci = { repository = "phillyfan1138/fang_oost_rust" }