[package]
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
description = "A library implementing Fang and Oosterlee's algorithm for inverting characteristic functions."
edition = "2018"
homepage = "https://github.com/danielhstahl/fang_oost_rust"
license = "MIT"
name = "fang_oost"
readme = "README.md"
repository = "https://github.com/danielhstahl/fang_oost_rust"
version = "0.15.1"

[dependencies]
num = "0.2"
num-complex = "0.2"
rayon = "1.5"

[dev-dependencies]
approx = "0.2.0"
criterion = "0.2"
statrs = "0.7.0"

[[bench]]
harness = false
name = "fang_oost_bench"

[badges]
travis-ci = {repository = "danielhstahl/fang_oost_rust"}
